@@ -1007,6 +1007,10 @@ class SmallInteger(Integer):
 
     __visit_name__ = 'small_integer'
 
+    @property
+    def _type_affinity(self):
+        return SmallInteger
+
 class BigInteger(Integer):
     """A type for bigger ``int`` integers.
 
@@ -1016,6 +1020,10 @@ class BigInteger(Integer):
     """
 
     __visit_name__ = 'big_integer'
+
+    @property
+    def _type_affinity(self):
+        return BigInteger
 
 class Numeric(_DateAffinity, TypeEngine):
     """A type for fixed precision numbers.
